# konan-game-engine

./: README.md
resources/: config.json  config.yaml
resources/shaders/: default.glsl
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  assersion.hpp  clock.cpp  clock.hpp  exceptions.hpp  files.cpp  files.hpp  logging.hpp  utility.hpp
src/ecs/: CMakeLists.txt  component_handler.cpp  component_handler.hpp  component_iterable.hpp  ecs.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp  systems.cpp  systems.hpp  types.hpp  world.cpp  world.hpp
src/editor/: CMakeLists.txt  editor.cpp  editor.hpp
src/editor/events/: end.hpp  start.hpp
src/editor/interpreters/: imgui_interpreter.hpp
src/editor/scripts/: editor_camera.cpp  editor_camera.hpp  editor_cube.cpp  editor_cube.hpp  editor_ui.cpp  editor_ui.hpp
src/editor/systems/: camera_movement_system.cpp  camera_movement_system.hpp  editor_render_system.cpp  editor_render_system.hpp  start_scene_system.cpp  start_scene_system.hpp
src/engine/: CMakeLists.txt  render_system.cpp  render_system.hpp
src/engine/components/: camera.cpp  camera.hpp  gl_model.cpp  gl_model.hpp  id.cpp  id.hpp  model.cpp  model.hpp  render_data.cpp  render_data.hpp  script.cpp  script.hpp  transform.cpp  transform.hpp
src/engine/events/: button.cpp  button.hpp  key.cpp  key.hpp  mouse_move.cpp  mouse_move.hpp
src/engine/interpreters/: create_interpreter.hpp  creator_interpreter.hpp  imgui_interpreter.hpp  interpreter.hpp
src/engine/pybind/: CMakeLists.txt  entity_exposure.hpp  python.cpp
src/engine/systems/: event_system.cpp  event_system.hpp  input_system.cpp  input_system.hpp  render_system.cpp  render_system.hpp  script_system.cpp  script_system.hpp  ui_system.cpp  ui_system.hpp
src/graphics/: CMakeLists.txt  bindable.cpp  bindable.hpp  framebuffer.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex_array.hpp  window.cpp  window.hpp
src/graphics/opengl/: gl_buffer.cpp  gl_buffer.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  gl_window.cpp  gl_window.hpp
